2009-12-10  Christos Zoulas <christos@zoulas.com>

	* Fix Linux-specific stuff in ops_tmpfs.c
	  AUTOFS_TMPFS_FS_FLAGS is defined only in the Linux-specific
	  conf_linux.c file, so it cannot be built on Solaris.
	  From: Krisztian Kovacs <Kris.Kovacs@morganstanley.com>

        * Add missing parenthesis to fix defined(XXX
	  From: Krisztian Kovacs <Kris.Kovacs@morganstanley.com>

	* In the previous commit we've already made a change that
	  makes this code unnecessary since the node is returned
	  even if the backing file server is known to be down.
	  Since the code path is unused it should be removed.
	  From: Krisztian Kovacs <Kris.Kovacs@morganstanley.com>

	* amfs_generic_lookup_child() tries to find an alternate
	  file server if it detects that the current one is down.
	  However, in the comparison used to decide if a possible
	  mount is the same as the current one it compares the am_loc
	  pointers instead of the actual mntfs pointers. Since
	  amfs_lookup_one_location() creates a brand new am_loc
	  structure for the returned mntfs structure the am_loc
	  pointer will be different even if the mntfs it's pointing
	  to is the same.
	  This tricks amfs_generic_lookup_child() think it has
	  found an alternate file server while it hasn't and thus
	  starts multiple racing mounts for the very same node and
	  mntfs.
	  From: Krisztian Kovacs <Kris.Kovacs@morganstanley.com>

	* In the new am_loc scheme mounted mntfs structures still
	  have their mf_fo structure left intact. So when restart
	  creates a fake mntfs for an already mounted filesystem it
	  should not free mf_fo right away.
	  From: Krisztian Kovacs <Kris.Kovacs@morganstanley.com>

	* Setting the error flag of the mntfs for which the share
	  is already mounted results in the mount point not being
	  removed when it times out. (Amd considers it an error
	  mntfs and thus umount becomse a no-op.)
	  From: Krisztian Kovacs <Kris.Kovacs@morganstanley.com>
